<resources>
    <string name="app_name">Teacher Reminder</string>
    <string name="add_button">Добавить слушателя</string>
    <string name="help_button">Получить помощь</string>
    <string name="close_button">Закрыть приложение</string>
    <string name="add_listener_button">Добавить</string>
    <string name="return_to_main_page_button">Вернуться на основную страницу</string>
    <string name="help_text">По всем вопросам обращайтесь по почте rudinp@yandex.ru.</string>
    <string name="add_listener_title">Форма добавления слушателя</string>
    <string name="add_listener_name">Введите ФИО</string>
    <string name="add_listener_login">Введите логин</string>
    <string name="add_listener_email">Введите электронную почту</string>
    <string name="add_listener_info">Введите информацию</string>
</resources>
